# Mouseophone

./: .gitignore  CMakeLists.txt  Idea.md  README.md  architecture.md  build_output.txt  error_cases.md  guidelines.md  realtime_refactor_plan.md  roadmap.md
.agent/workflows/: deploy_docker.md  implement_cpp_core.md  research_audio.md  research_hardware.md
Cpp_src/: CMakeLists.txt  mouse_mic.cpp
src/: main.cpp
src/core/: processor_chain.cpp  processor_chain.h  ring_buffer.h  signal_reconstructor.cpp  signal_reconstructor.h  wav_writer.cpp  wav_writer.h
